# abicheck

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  action.yml  buildsource-checks-plan.md  codecov.yml  codemeta.json  mkdocs.yml  pyproject.toml  repo_facts.json  ruff.toml
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
abicheck/: __init__.py  _compiler_options.py  aggregate.py  annotations.py  api_types.py  appcompat.py  assessment.py  baseline.py  binary_fingerprint.py  binary_utils.py  binder.py  btf_metadata.py  build_context.py  bundle.py  bundle_manifest.py  bundle_models.py  castxml_policy.py  cc_wrapper.py  change_registry.py  change_registry_buildsource.py  change_registry_castxml.py  change_registry_composition.py  change_registry_coverage.py  change_registry_numpy.py  change_registry_suppression.py  change_registry_types.py  change_registry_wheel.py  checker.py  checker_policy.py  checker_types.py  clang_layout_tool.py  cli.py  cli_aggregate.py  cli_appcompat.py  cli_audit.py  cli_baseline.py  cli_build_output.py  cli_buildsource.py  cli_buildsource_helpers.py  cli_buildsource_merge.py  (+151 more)
action/: AGENTS.md  install-castxml.sh  install-deps.sh  run.sh  validate-inputs.sh
agent-evals/: CLAUDE.md  README.md  run_task.py
changelog.d/: 20260716_120000_pre-scriv_legacy_01.md  20260716_120000_pre-scriv_legacy_02.md  20260716_120000_pre-scriv_legacy_03.md  20260716_120000_pre-scriv_legacy_04.md  20260716_120000_pre-scriv_legacy_05.md  20260716_120000_pre-scriv_legacy_06.md  20260716_120000_pre-scriv_legacy_07.md  20260717_161302_noreply_brassy_release_notes_s0cmfn.md  20260717_183000_napetrov_reachability_suppressions.md  20260717_190000_claude_castxml_cv_qualifier_suffix.md  20260717_190500_claude_castxml-clang-l2-comparison-c56lhi.md  20260717_194300_noreply_additions_presentation_model_lpf498.md  20260717_194428_noreply_abicheck_onedal_integration_apg6c9.md  20260717_194555_noreply_review_gaps_latest_main_fxcf4b.md  20260717_195930_noreply_adr_044_8o5inc.md  20260717_200000_claude_g28_phase3_hybrid_snapshot.md  20260717_200000_napetrov_svs_scan_deadline_bounding.md  20260717_202722_noreply_adr_044_8o5inc.md  20260717_210000_claude_g28_phase3_hybrid_followups.md  20260717_210925_noreply_additions_presentation_model_lpf498.md  20260717_220000_claude_g28_phase3_param_defaults_fix.md  20260717_230000_claude_l4_hybrid_extractor_guard.md  20260717_231232_noreply_additions_presentation_model_lpf498.md  20260717_232400_noreply_additions_presentation_model_lpf498.md  20260717_232858_noreply_adr_044_8o5inc.md  20260717_233000_claude_hybrid_header_graph_attach.md  20260717_233331_noreply_fan_out_fan_in_abi_5lhs3f.md  20260717_234500_claude_itanium_template_suffix_fix.md  20260718_000000_claude_macho_hybrid_mangled_underscore.md  20260718_003000_claude_param_defaults_legacy_producer_fix.md  20260718_010000_claude_schema_version_bump_hybrid.md  20260718_012959_claude_review_gaps_latest_main_fxcf4b.md  20260718_020000_claude_g28_phase4_clang_layout_tool.md  20260718_030000_claude_dump_cache_env_pin_key.md  20260718_030538_claude_abicheck_onedal_integration_followup.md  20260718_032644_claude_abicheck_onedal_integration_followup2.md  20260718_040000_claude_layout_tool_qualified_name_sysinclude.md  20260718_050000_claude_layout_tool_cache_key_xclang_fix.md  20260718_051719_noreply_failing_tests_main_j1medk.md  20260718_053402_noreply_main_cli_stabilization_analysis_z9f40p.md  (+162 more)
contrib/abicheck-clang-plugin/: AGENTS.md  AbicheckFactsPlugin.cpp  CMakeLists.txt  README.md
contrib/abicheck-clang-plugin/tests/: conformance.py  scan_flow.py  test_public_roots_diagnostic.py
contrib/abicheck-clang-plugin/tests/fixtures/: widget.cpp
contrib/abicheck-clang-plugin/tests/fixtures/include/: guarded.hpp  widget.hpp
docs/: AGENTS.md  CLAUDE.md  getting-started.md  index.md  troubleshooting.md
eval/: CLAUDE.md  FOLLOWUPS.md  README.md  REPORT.md  SCALING.md  condafetch.py  manifest.yaml  runner.py  scaling.py  scan_level_scaling.py
examples/: CLAUDE.md  CMakeLists.txt  README.md  ground_truth.json
scripts/: CLAUDE.md  benchmark_comparison.py  benchmark_scaling.py  build_and_check_distribution.py  check_ai_readiness.py  check_changelog_fragment.py  check_distribution_metadata.py  check_docs_contract.py  check_examples_validation_status_sync.py  check_fair_metadata.py  check_fp_rate.py  check_mutation_score.py  check_tier_accuracy.py  check_usecase_docs_sync.py  diff_cli_surface.py  dump_cli_surface.py  evidence_tiers.py  extract_bundle_manifest.py  frozen_competitor_results.json  gen_action_reference.py  gen_adr_index.py  gen_detector_spec.py  gen_examples_docs.py  gen_g20_fixtures.py  gen_l3l4l5_examples.py  gen_reachability_examples.py  gen_repo_facts.py  gen_stable_abi_data.py  generate_benchmark_report.py  profile_l2_scan_phases.py  profile_large_l2_castxml.py  profile_large_l2_castxml_runner.py  profile_large_l2_castxml_v2.py  profile_large_l2_castxml_v3.py  publish_schemas.py  restore_git_mtimes.py  summarize_test_durations.py  verify.py
tests/: CLAUDE.md  _scan_fixtures.py  check_stripped_fp.py  check_validate_results.py  conftest.py  test_abicc_compat_flags.py  test_abicc_parity.py  test_abicc_parity_extended.py  test_abicc_scenario_parity.py  test_abicompat_parity.py  test_abidiff_parity.py  test_abipkgdiff_parity.py  test_action_baseline.py  test_action_check_target.py  test_action_collect_facts.py  test_action_compile_context_parity.py  test_action_reference.py  test_action_resolve_baseline.py  test_action_run_contract.py  test_action_run_sh_compare_build_source.py  test_action_run_sh_dry_run_baseline.py  test_adr_index.py  (+350 more)
tools/clang-layout-tool/: CMakeLists.txt  README.md
tools/clang-layout-tool/src/: main.cpp
tools/clang-layout-tool/tests/: run_tests.py
tools/clang-layout-tool/tests/fixtures/: c_anon_typedef.c  c_record.c  nonpod_tailpad.cpp  polymorphic.cpp  simple.cpp  tailpad.cpp  virtual_inherit.cpp
(+1022 files in other folders)
