[build-system]
requires = ["setuptools>=68,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "abicheck"
version = "0.5.0"
description = "ABI compatibility checker for C/C++ shared libraries"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Nikolay Petrov", email = "sfasp.post@gmail.com"}]
requires-python = ">=3.10"
keywords = ["abi", "api", "compatibility", "checker", "shared-library", "elf", "pe", "macho", "dwarf", "castxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich-click>=1.7",    # progressive-disclosure --help option grouping (G21.8/M1)
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
    "pyelftools>=0.29",   # ELF/DWARF parsing
    "packaging>=21.0",    # Version comparison for suppression version_range
    "pefile>=2023.2.7",   # Windows PE/COFF parsing
    "macholib>=1.16",     # macOS Mach-O parsing
]

[project.scripts]
abicheck = "abicheck.cli:main"
abicheck-mcp = "abicheck.mcp_server:main"
abicheck-cc = "abicheck.cc_wrapper:main"

[project.urls]
Repository = "https://github.com/abicheck/abicheck"
Documentation = "https://abicheck.github.io/abicheck/"
"Bug Tracker" = "https://github.com/abicheck/abicheck/issues"
Changelog = "https://github.com/abicheck/abicheck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist>=3.0",
    "filelock>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.3",
    # Pinned exact: an unpinned mypy (`mypy>=1.0` + `pip install mypy` in CI) made the
    # type gate non-reproducible — 2 errors slipped onto a branch and only surfaced on a
    # newer mypy (field-eval CI gap). Bump deliberately when adopting a new mypy.
    "mypy==1.19.1",
    "types-PyYAML",
    "jsonschema>=4.0",
    "scriv[toml]>=1.5",  # changelog-fragment tool, see changelog.d/README.md
]
# Real-world validation harness (validation/): fetches + extracts conda-forge
# packages. Modern conda-forge ships `.conda` (zstd-compressed) artifacts, so a
# pure-Python zstd backend is needed to extract them without a system `zstd`
# binary (Python <3.14 has no stdlib zstd). Kept out of `dev`/core to honour the
# lightweight-core rule — only the validation lane needs it.
validation = [
    "zstandard>=0.21",
]
# Mirrors [tool.pixi.feature.docs.pypi-dependencies] and the `lint-and-types`
# CI job's docs install — `pip install -e ".[dev,docs]"` is what
# `scripts/verify.py --profile pr`'s docs-build step needs to actually run
# instead of skipping (CLAUDE.md "M0-3": a skip must never be mistaken for a
# pass — see verify.py's incomplete-run warning).
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocs-redirects",
]
# Mirrors [tool.pixi.feature.dist.pypi-dependencies] and the `fair-metadata`
# CI job's install — `pip install -e ".[dev,dist]"` is what
# `scripts/verify.py --profile pr`'s distribution-build step needs to
# actually run instead of skipping (same M0-3 rationale as `docs` above).
dist = [
    "build",
    "twine",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# ``unused-ignore`` flips on/off depending on the mypy + pyelftools combo
# the developer or CI runner happens to have installed (different
# Python minor versions, different bundled stubs). Disabling it globally
# keeps the `# type: ignore[...]` comments scattered throughout the
# pyelftools call sites portable across environments without forcing a
# strict version pin on every contributor.
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
# pyelftools has no type stubs or py.typed marker — all its APIs are untyped.
# Disable strict checks for modules that directly call pyelftools APIs.
module = [
    "abicheck.appcompat",
    "abicheck.elf_metadata",
    "abicheck.pe_metadata",
    "abicheck.macho_metadata",
    "abicheck.dwarf_metadata",
    "abicheck.dwarf_advanced",
    "abicheck.dwarf_unified",
    "abicheck.dwarf_presence",
    "abicheck.dumper",
    "abicheck.package",
    "abicheck.pdb_parser",
    "abicheck.pdb_metadata",
    "abicheck.pdb_utils",
    "abicheck.sycl_metadata",
    "abicheck.binary_fingerprint",
    "abicheck.buildsource.compiler_record",
]
disallow_untyped_calls = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
# Click decorators (@click.command, @click.option, etc.) are untyped.
# ``compat/cli.py`` additionally subclasses ``click.Group`` (typed as Any)
# and threads click-managed list[str] values through helper accessors, so
# we also relax ``no-any-return`` / ``misc`` there. ``cli_dump_helpers``
# similarly subclasses ``click.ClickException`` (typed as Any ->
# "cannot subclass Any" / ``misc``) for ``DumpDepthNotSatisfiedError``.
module = [
    "abicheck.cli",
    "abicheck.cli_resolve",
    "abicheck.cli_aggregate",
    "abicheck.cli_appcompat",
    "abicheck.cli_build_output",
    "abicheck.cli_compare_release",
    "abicheck.cli_debian_symbols",
    "abicheck.cli_baseline",
    "abicheck.cli_buildsource",
    "abicheck.cli_dump_helpers",
    "abicheck.cli_graph",
    "abicheck.cli_inputs",
    "abicheck.cli_plugin",
    "abicheck.cli_pr_comment",
    "abicheck.cli_probe",
    "abicheck.cli_stack",
    "abicheck.cli_suggest",
    "abicheck.cli_surface",
    "abicheck.compat.cli",
]
disallow_untyped_decorators = false
disable_error_code = ["no-any-return", "misc"]

[[tool.mypy.overrides]]
# ``cli_scan`` uses click decorators (untyped → ``no-any-return``/``misc``, as
# above) AND imports ``yaml`` for the optional ``--risk-rules`` profile (stubs
# may be absent → ``import-untyped``). One block so the codes don't conflict.
# ``cli_scan_baseline`` is the extracted ``--baseline``/``--estimate`` sub-flow
# (same ``yaml`` + engine-``Any`` surface), so it shares the same relaxations.
# ``cli_project_targets`` (G30 P1.5) reads ``.abicheck.yml`` directly for its
# ``project-targets validate`` command, same ``yaml`` import.
# ``cli_run_plan`` (G30 P1.4) reads ``.abicheck.yml`` directly for its
# ``run-plan generate`` command, same ``yaml`` import.
module = [
    "abicheck.cli_scan",
    "abicheck.cli_scan_baseline",
    "abicheck.cli_project_targets",
    "abicheck.cli_run_plan",
]
disallow_untyped_decorators = false
disable_error_code = ["no-any-return", "misc", "import-untyped"]

[[tool.mypy.overrides]]
# ``cli_params.PolicyFileParam`` subclasses ``click.ParamType``. Depending on
# the installed click's type stubs, mypy treats the base either as ``Any``
# (-> ``misc``: "cannot subclass Any") or as a generic needing a type argument
# (-> ``type-arg``). Suppress both so the module stays portable across click /
# mypy versions without a runtime ``ParamType[...]`` subscription.
module = ["abicheck.cli_params"]
disallow_untyped_decorators = false
disable_error_code = ["no-any-return", "misc", "type-arg"]

[[tool.mypy.overrides]]
# FastMCP decorators (@mcp.tool, etc.) are untyped.
module = ["abicheck.mcp_server"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# types-PyYAML stubs may not be found in all environments;
# the package is listed in [project.optional-dependencies.dev].
module = [
    "abicheck.policy_file",
    "abicheck.suppression",
    "abicheck.environment_matrix",
    "abicheck.probe_harness",
    "abicheck.bundle",
    "abicheck.bundle_manifest",
    "abicheck.buildsource.extractor_manifest",
    "abicheck.buildsource.inline",
    "abicheck.buildsource.project_targets",
]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires castxml, gcc/g++ installed",
    "libabigail: requires abidiff + gcc/g++ — libabigail parity tests",
    "abicc: requires abi-compliance-checker + gcc/g++ — ABICC parity tests",
    "msvc: requires MSVC cl.exe (Windows) — MSVC+PDB end-to-end lane",
    "slow: marks tests as slow (hypothesis / performance benchmarks)",
    "golden: golden-output snapshot tests",
]

[tool.setuptools.packages.find]
include = ["abicheck*"]

[tool.setuptools.package-data]
"abicheck.schemas" = ["*.json"]
"abicheck.policies" = ["*.yaml"]

[tool.coverage.run]
branch = true
source = ["abicheck"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.scriv]
# Changelog-fragment tool (avoids everyone editing the same CHANGELOG.md
# "Unreleased" section — see changelog.d/README.md and CONTRIBUTING.md).
format = "md"
fragment_directory = "changelog.d"
new_fragment_template = "file: fragment_template.md.j2"
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Performance", "Security", "Documentation"]
output_file = "CHANGELOG.md"
md_header_level = "2"
entry_title_template = "[{{ version }}] — {{ date.strftime('%Y-%m-%d') }}"
version = "literal: pyproject.toml: project.version"

[tool.mutmut]
# Mutmut v3 config — mutation testing for core detector logic.
# Usage:
#   mutmut run                       # full run
#   mutmut results                   # view surviving mutants
#   mutmut show <id>                 # show a specific mutant
#
# Focus on the core detection modules where surviving mutants indicate
# test gaps that could allow regressions:
paths_to_mutate = [
    "abicheck/diff_symbols.py",      # function/variable/parameter detectors
    "abicheck/diff_types.py",        # type/enum/union/typedef detectors
    "abicheck/diff_platform.py",     # ELF/DWARF/PE/Mach-O detectors
    "abicheck/diff_vtable_layout.py",  # G23 B2 vtable-group reconstruction
    "abicheck/diff_filtering.py",    # deduplication and redundancy logic
    "abicheck/checker_policy.py",    # verdict classification
    "abicheck/idioms.py",            # ADR-027 idiom & anti-pattern recognisers
    "abicheck/pattern_verdicts.py",  # ADR-027 A4 verdict modulation
    "abicheck/surface_graph.py",     # ADR-027 declaration-graph substrate
]
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no -m 'not integration and not libabigail and not abicc and not slow'"

# ---------------------------------------------------------------------------
# pixi (https://pixi.sh) — conda-forge-based dev environments.
#
# `pip install -e ".[dev]"` (see CONTRIBUTING.md) remains fully supported;
# pixi is an alternative that also manages the *system* tools (castxml, a
# C/C++ compiler, libabigail, abi-compliance-checker) that CONTRIBUTING.md's
# "Option A: conda-forge" section previously had to install by hand.
#
#   pixi install            # base dev environment (lint/type/unit-test tools)
#   pixi run test            # fast unit-test lane (same as CLAUDE.md quick reference)
#   pixi run check            # lint + format-check + typecheck + test + ai-readiness
#   pixi run -e integration test-integration   # + castxml/compiler (needs `integration` env)
#   pixi run -e parity test-libabigail          # + libabigail (linux-64 only)
#   pixi run -e parity test-abicc                # + abi-compliance-checker (linux-64 only)
#   pixi run -e docs docs-build                   # mkdocs --strict build
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
abicheck = { path = ".", editable = true }

# All of the tasks below except `fmt`/`test-cov` (which mutate or vary a check
# rather than gate it) route through scripts/verify.py, the single
# implementation shared by pre-commit, CI, and contributor docs (CLAUDE.md
# "M0-3") — so `pixi run check` and the required CI checks can never drift
# apart again.
[tool.pixi.feature.dev.tasks]
verify-fast = "python scripts/verify.py --profile fast"
verify-pr = "python scripts/verify.py --profile pr"
verify-full = "python scripts/verify.py --profile full"
lint = "python scripts/verify.py --profile fast --only lint"
fmt = "ruff format abicheck/ tests/"
fmt-check = "python scripts/verify.py --profile fast --only fmt-check"
test = "python scripts/verify.py --profile fast --only unit-fast"
test-cov = "pytest tests/ -m \"not integration and not libabigail and not abicc and not slow and not golden\" --cov=abicheck --cov-report=term-missing"
typecheck = "python scripts/verify.py --profile fast --only typecheck"
ai-readiness = "python scripts/verify.py --profile pr --only ai-readiness"
# `pixi run check` == the exact PR gate (scripts/verify.py --profile pr), not
# a hand-picked subset — this is the definition-of-done contributors/agents
# should trust.
check = "python scripts/verify.py --profile pr"

# Shared castxml + C/C++ compiler, needed by both `integration` (header/DWARF
# parsing) and `parity` (feeding abidiff/abi-compliance-checker ABI dumps).
# Not offered for win-64: MSVC isn't installable from conda-forge alone (see
# the `windows-msvc` CI lane, which sets up cl.exe separately via
# ilammy/msvc-dev-cmd) — Windows contributors run the base `dev` environment.
[tool.pixi.feature.native-toolchain]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.native-toolchain.dependencies]
castxml = "*"
c-compiler = "*"
cxx-compiler = "*"

# `integration` marker (DWARF/header parsing tests) — adds cmake on top of
# the shared native-toolchain feature.
[tool.pixi.feature.integration.dependencies]
cmake = "*"

[tool.pixi.feature.integration.tasks]
test-integration = "pytest tests/ -v -m integration --tb=short"

# libabigail (abidiff/abipkgdiff) + abi-compliance-checker, for the
# `libabigail`/`abicc` parity markers. Both are conda-forge linux-64-only
# packages (see the `libabigail-parity`/`abicc-parity` CI jobs).
[tool.pixi.feature.parity]
platforms = ["linux-64"]

[tool.pixi.feature.parity.dependencies]
libabigail = "*"
abi-compliance-checker = "*"

[tool.pixi.feature.parity.tasks]
# Marker-scoped across all of tests/ (not a hard-coded file list) so newly
# added `libabigail`/`abicc`-marked files (e.g. the `_extended` parity
# suites) are picked up automatically.
test-libabigail = "pytest tests/ -v -m libabigail --tb=short"
test-abicc = "pytest tests/ -v -m abicc --tb=short"

# mkdocs site build (`docs/`), matching the `lint-and-types` CI job.
[tool.pixi.feature.docs.pypi-dependencies]
mkdocs = "*"
mkdocs-material = "*"
pymdown-extensions = "*"
mkdocs-redirects = "*"

[tool.pixi.feature.docs.tasks]
docs-build = "mkdocs build --strict"
docs-serve = "mkdocs serve"

# `python -m build` + `twine check`, matching the `fair-metadata` CI job's
# distribution-build step (now a required `pr`-profile gate — CLAUDE.md
# "M0-3": a skip must never be mistaken for a pass, so `default` below must
# provision this rather than let `pixi run check` skip-and-fail out of the box).
[tool.pixi.feature.dist.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.environments]
# Includes `docs` and `dist` so `pixi run check` (== `--profile pr`) actually
# completes rather than skipping docs-build/distribution-build and failing
# the incomplete-run gate on a fresh `pixi install` — see the two features
# above.
default = { features = ["dev", "mcp", "docs", "dist"], solve-group = "default" }
integration = { features = ["dev", "mcp", "native-toolchain", "integration"], solve-group = "default" }
parity = { features = ["dev", "mcp", "native-toolchain", "parity"], solve-group = "parity" }
docs = { features = ["docs"], solve-group = "docs" }
